fix alignment of forecast elements

--- a/WeatherApp/src/styles.css
+++ b/WeatherApp/src/styles.css
@@ -174,9 +174,16 @@ input,
 .next-day {
   font-weight: 700;
   font-size: 14px;
-  padding-right: 10px;
+  text-align: center;
+}
+.next-day-max {
+  font-weight: 700;
+  font-size: 14px;
+  text-align: center;
+  padding-right: 3px;
 }
 .next-day-min {
+  padding-left: 3px;
   font-weight: 400;
   font-size: 14px;
 }
